# ADA-Cosmos

./: Agenda.md  README.md  package-lock.json
.obsidian/: workspace.json
backend/: .gitignore  Backend agenda.md  CMakeLists.txt  README.md
backend/data/: TokenOHLC.csv
backend/include/data/: computations.hpp  table.hpp
backend/include/requests/: request.hpp  tokenPriceOHLCV.hpp  topLiquidityTokens.hpp
backend/include/tools/: tools.hpp
backend/src/: main.cpp
backend/src/data/: Computations.cpp  Computations.hpp  Table.cpp  Table.hpp
backend/src/graphs/: ForceDirectedLayout.cpp  ForceDirectedLayout.hpp  Graph.cpp  Graph.hpp
backend/src/homology/: Bars.hpp  Complex.cpp  Complex.hpp  Simplex.cpp  Simplex.hpp
backend/src/requests/: Request.cpp  Request.hpp  TokenPriceOHLCV.cpp  TokenPriceOHLCV.hpp  TopLiquidityTokens.cpp  TopLiquidityTokens.hpp
backend/src/tools/: Tools.hpp  tools.cpp
fronend/: package-lock.json  package.json
fronend/app/landing/: page.tsx
frontend/: .gitignore  README.MD  middleware.ts  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/correlation/: FocusGraphWrapper.tsx  graph.tsx  page.tsx  tokens.tsx  types.ts
frontend/app/(app)/correlation/components/: Controls.tsx  InfoModal.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/search/: page.tsx
frontend/app/(app)/whales/: page.tsx
frontend/app/(landing)/: layout.tsx
frontend/app/(landing)/landing/: page.tsx
frontend/app/api/taptoolsProxy/: route.ts
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/components/: FetchTokensData.tsx  FocusGraph.tsx  FocusGraphWrapper.tsx  TokensGraphClient.tsx  tokenInfo.tsx  tokens.tsx
frontend/app/landing/: page.tsx
frontend/app/landing/components/: halftone-waves.tsx
frontend/app/scan/: page.tsx
frontend/app/serverr/: page.tsx
frontend/app/tables/: FocusGraphWrapper.tsx  graph.tsx  layout.tsx  page.tsx  tokens.tsx  tokensLiquidity.tsx
frontend/app/tables/components/: InfoModal.tsx
frontend/app/tables/constants/: graph.ts  index.ts
frontend/app/tables/hooks/: useForceGraph.ts
frontend/app/tables/utils/: graphHelpers.ts
frontend/components/: app-sidebar.tsx  planet-info.tsx  theme-toggle.tsx
frontend/components/sidebar/: tokenStats.tsx  types.ts
frontend/components/sidebar/tabs/: descriptionTab.tsx  marketTab.tsx  tokenHeader.tsx
frontend/components/sidebar/tokenInfo/: tokenStats.tsx
frontend/components/sidebar/walletExplorer/: walletExplorer.tsx
frontend/contexts/: SelectedTokenContext.tsx
frontend/hooks/: useApi.ts
frontend/interfaces/integration/: IIntegrationApi.ts  index.ts
frontend/interfaces/metrics/: IMetricsApi.ts  index.ts
frontend/interfaces/nft/: INftApi.ts  index.ts
frontend/interfaces/onchain/: IOnchainApi.ts  index.ts
frontend/interfaces/tokens/: IMarketTokensApi.ts  index.ts  tokenHolders.ts  tokenLinks.ts  tokenLiquidityPools.ts  tokenLoans.ts  tokenMarketCap.ts  tokenOHLCV.ts  tokenPrices.ts  tokenTopTokens.ts  tokenTrades.ts  tokenTradingStats.ts
frontend/interfaces/wallet/: IWalletApi.ts  index.ts
frontend/services/: IntegrationApiService.ts  MarketTokensApiService.ts  MetricsApiService.ts  NftApiService.ts  OnchainApiService.ts  WalletApiService.ts  index.ts  serverCache.ts
frontend/types/: globals.d.ts
graphData/: graphV2.json  logReturnGraph.json
obsidian/: Agenda.md  Backend agenda.md
obsidian/.obsidian/: app.json  workspace.json
obsidian/frontend/: frontend canvas.canvas
resources/: Resources and references.md
(+27 files in other folders)
